Always display y-scroll bar for avoiding the menu to jump.

--- a/src/doc/App.scss
+++ b/src/doc/App.scss
@@ -8,6 +8,7 @@ body {
   color: #353535;
   position: relative;
   min-height: 100%;
+  overflow-y: scroll;
 }
 
 a {
